Fixed side panel overlap, embed grid format

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-
-
-#root{
-    width: 100vw;
-    height: 100vh;
+body{
+    padding-left: 15vw;
     background-color: rgb(30, 30, 30);
 }
+
+
 
 #nav-panel {
     background-color: rgb(37, 37, 37);
     position: fixed;
     height: 100vh;
     width: 15vw;
+    left: 0;
 }
 
 #nav-panel-logo-text {
@@ -66,25 +66,24 @@
 
 .spotifyEmbed {
     position: absolute;
-    display: inline-block;
     margin-top: 10vh;
     zoom: 100%;
+    
 }
 
 .spotifyEmbedContainer {
     position: relative;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    display: inline-block;
 }
 
-#sampleSongID {
-    position: absolute;
-    left: 16vw;
-    width: 25vw;
-    height: 5vh;
-    background-color: rgb(192, 192, 192);
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    margin-left: 3.5vw;
+    margin-right: auto;
 }
+
+
 
 .nav-panel-button {
     display: grid;
